Fix link to project

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           />
         </picture> </a
       ><a
-        href="https://github.com/dtroode/kistauri"
+        href="https://github.com/dtroode/kistauri-blog"
         title="Сделал предыдущую версию этого сайта с блогом"
       >
         <picture
