Fix first image sizes attribute

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="https://t.me/dtroode">
         <picture>
           <source
-            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            sizes="calc(100vw - 2rem)"
             srcset="
               ./images/700/contact-700.avif    700w,
               ./images/1000/contact-1000.avif 1000w,
