--- a/index.html
+++ b/index.html
@@ -175,6 +175,33 @@
           <img src="./images/channel.png" alt="Телеграм-канал" loading="lazy" />
         </picture> </a
       >
+      <a href="./images/cpp-queue-push.jpg" title="Очередь на указателях">
+        <picture>
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cpp-queue-push-700.avif    700w,
+              ./images/1000/cpp-queue-push-1000.avif 1000w,
+              ./images/cpp-queue-push.avif           1800w
+            "
+            type="image/avif"
+          />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cpp-queue-push-700.jpg    700w,
+              ./images/1000/cpp-queue-push-1000.jpg 1000w,
+              ./images/cpp-queue-push.jpg           1800w
+            "
+            type="image/jpg"
+          />
+          <img
+            src="./images/cpp-queue-push.jpg"
+            alt="Очередь на указателях"
+            loading="lazy"
+          />
+        </picture>
+      </a>
       <a href="https://cyxym.vercel.app/" title="Сайт города Сухум">
         <picture>
           <source
