--- a/index.html
+++ b/index.html
@@ -46,6 +46,60 @@
     </header>
     <main>
       <a
+        href="./images/extreme.jpg"
+        title="Свичи"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/extreme-700.avif    700w,
+              ./images/1000/extreme-1000.avif 1000w,
+              ./images/extreme.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/extreme-700.jpg    700w,
+              ./images/1000/extreme-1000.jpg 1000w,
+              ./images/extreme.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/extreme.jpg"
+            alt="Свичи"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/cables.jpg"
+        title="Кабели"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cables-700.avif    700w,
+              ./images/1000/cables-1000.avif 1000w,
+              ./images/cables.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cables-700.jpg    700w,
+              ./images/1000/cables-1000.jpg 1000w,
+              ./images/cables.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/cables.jpg"
+            alt="Кабели"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
         href="https://teletype.in/@dtroode/eve-ng-google-cloud"
         title="Установил EVE-NG на сервер и рассказал как"
       >
