--- a/index.html
+++ b/index.html
@@ -46,6 +46,33 @@
     </header>
     <main>
       <a
+        href="https://drive.google.com/file/d/1OQsp3kToJ46_DmHFHJT-UOTkWp-lFrKg/view?usp=sharing"
+        title="CV"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cv-700.avif    700w,
+              ./images/1000/cv-1000.avif 1000w,
+              ./images/cv.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cv-700.png    700w,
+              ./images/1000/cv-1000.png 1000w,
+              ./images/cv.png           1800w
+            "
+            type="image/png" />
+          <img
+            src="./images/cv.png"
+            alt="CV"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
         href="./images/extreme.jpg"
         title="Свичи"
       >
