Replace contact image with text link

--- a/index.html
+++ b/index.html
@@ -20,29 +20,7 @@
   </head>
   <body>
     <header>
-      <a href="https://t.me/dtroode">
-        <picture>
-          <source
-            sizes="calc(100vw - 2rem)"
-            srcset="
-              ./images/700/contact-700.avif    700w,
-              ./images/1000/contact-1000.avif 1000w,
-              ./images/contact.avif           1800w
-            "
-            type="image/avif"
-          />
-          <source
-            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
-            srcset="
-              ./images/700/contact-700.png    700w,
-              ./images/1000/contact-1000.png 1000w,
-              ./images/contact.png           1800w
-            "
-            type="image/jpg"
-          />
-          <img src="./images/contact.png" alt="Связь со мной" loading="lazy" />
-        </picture>
-      </a>
+      <p><a href="https://t.me/dtroode">t.me/dtroode</a></p>
     </header>
     <main>
       <a
