--- a/index.html
+++ b/index.html
@@ -24,6 +24,330 @@
     </header>
     <main>
       <a
+        href="./images/waf.jpg"
+        title="Web Application Firewall"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/waf-700.avif    700w,
+              ./images/1000/waf-1000.avif 1000w,
+              ./images/waf.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/waf-700.jpg    700w,
+              ./images/1000/waf-1000.jpg 1000w,
+              ./images/waf.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/waf.jpg"
+            alt="Web Application Firewall"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/werther_db.jpg"
+        title="База данных Mongo"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/werther_db-700.avif    700w,
+              ./images/1000/werther_db-1000.avif 1000w,
+              ./images/werther_db.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/werther_db-700.jpg    700w,
+              ./images/1000/werther_db-1000.jpg 1000w,
+              ./images/werther_db.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/werther_db.jpg"
+            alt="База данных Mongo"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/spb.jpg"
+        title="Питер"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/spb-700.avif    700w,
+              ./images/1000/spb-1000.avif 1000w,
+              ./images/spb.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/spb-700.jpg    700w,
+              ./images/1000/spb-1000.jpg 1000w,
+              ./images/spb.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/spb.jpg"
+            alt="Питер"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/keenetic_spb.jpg"
+        title="???"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/keenetic_spb-700.avif    700w,
+              ./images/1000/keenetic_spb-1000.avif 1000w,
+              ./images/keenetic_spb.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/keenetic_spb-700.jpg    700w,
+              ./images/1000/keenetic_spb-1000.jpg 1000w,
+              ./images/keenetic_spb.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/keenetic_spb.jpg"
+            alt="???"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/traffic_hackathon.jpg"
+        title="Дампы Wireshark"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/traffic_hackathon-700.avif    700w,
+              ./images/1000/traffic_hackathon-1000.avif 1000w,
+              ./images/traffic_hackathon.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/traffic_hackathon-700.jpg    700w,
+              ./images/1000/traffic_hackathon-1000.jpg 1000w,
+              ./images/traffic_hackathon.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/traffic_hackathon.jpg"
+            alt="Дампы Wireshark"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/pudge.jpg"
+        title="Широкий Пудж"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/pudge-700.avif    700w,
+              ./images/1000/pudge-1000.avif 1000w,
+              ./images/pudge.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/pudge-700.jpg    700w,
+              ./images/1000/pudge-1000.jpg 1000w,
+              ./images/pudge.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/pudge.jpg"
+            alt="Широкий Пудж"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="https://vk.com/wall-3477_4973"
+        title="Хакатон в вузе"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cisco_hackathon-700.avif    700w,
+              ./images/1000/cisco_hackathon-1000.avif 1000w,
+              ./images/cisco_hackathon.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/cisco_hackathon-700.jpg    700w,
+              ./images/1000/cisco_hackathon-1000.jpg 1000w,
+              ./images/cisco_hackathon.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/cisco_hackathon.jpg"
+            alt="Хакатон в вузе"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/ibm.jpg"
+        title="Первый день на работе"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/ibm-700.avif    700w,
+              ./images/1000/ibm-1000.avif 1000w,
+              ./images/ibm.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/ibm-700.jpg    700w,
+              ./images/1000/ibm-1000.jpg 1000w,
+              ./images/ibm.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/ibm.jpg"
+            alt="Первый день на работе"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/secondschool_proto.jpg"
+        title="Концепт сайта школы"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/secondschool_proto-700.avif    700w,
+              ./images/1000/secondschool_proto-1000.avif 1000w,
+              ./images/secondschool_proto.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/secondschool_proto-700.jpg    700w,
+              ./images/1000/secondschool_proto-1000.jpg 1000w,
+              ./images/secondschool_proto.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/secondschool_proto.jpg"
+            alt="Концепт сайта школы"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/filatov_mac.jpg"
+        title="Готовлюсь к экзамену по алгоритмам и структурам данных"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/filatov_mac-700.avif    700w,
+              ./images/1000/filatov_mac-1000.avif 1000w,
+              ./images/filatov_mac.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/filatov_mac-700.jpg    700w,
+              ./images/1000/filatov_mac-1000.jpg 1000w,
+              ./images/filatov_mac.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/filatov_mac.jpg"
+            alt="Готовлюсь к экзамену по алгоритмам и структурам данных"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/gcloud_loading.jpg"
+        title="Google Cloud"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/gcloud_loading-700.avif    700w,
+              ./images/1000/gcloud_loading-1000.avif 1000w,
+              ./images/gcloud_loading.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/gcloud_loading-700.jpg    700w,
+              ./images/1000/gcloud_loading-1000.jpg 1000w,
+              ./images/gcloud_loading.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/gcloud_loading.jpg"
+            alt="Google Cloud"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
+        href="./images/alienvault.jpg"
+        title="OSSIM"
+      >
+        <picture
+          ><source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/alienvault-700.avif    700w,
+              ./images/1000/alienvault-1000.avif 1000w,
+              ./images/alienvault.avif           1800w
+            "
+            type="image/avif" />
+          <source
+            sizes="(max-width: 847px) calc(100vw - 2rem), (max-width: 1263px) calc((100vw - 3rem)/2), (max-width: 1263px) calc((100vw - 4rem)/3), 1000px"
+            srcset="
+              ./images/700/alienvault-700.jpg    700w,
+              ./images/1000/alienvault-1000.jpg 1000w,
+              ./images/alienvault.jpg           1800w
+            "
+            type="image/jpg" />
+          <img
+            src="./images/alienvault.jpg"
+            alt="OSSIM"
+            loading="lazy"
+        /></picture>
+      </a>
+      <a
         href="https://drive.google.com/file/d/1OQsp3kToJ46_DmHFHJT-UOTkWp-lFrKg/view?usp=sharing"
         title="CV"
       >
